# unreal-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  EpicUnrealMCPBridge.cpp  PLUGIN_SETUP.md  README.md  mcp.json
Python/: _subagent_send.py  mcp-project.json  mypy.ini  pyproject.toml  ruff.toml  unreal_mcp_server.py  unreal_mcp_server_advanced.py  unreal_mcp_server_http.py
Python/scripts/: bp_mulligan_impl.py
Python/tests/: README_PIE.md  __runner.py  _diag_battle.py  _diag_battle003.py  _diag_deploy.py  _diag_draftstate.py  _diag_hold.py  _diag_imc_click.py  _diag_imc_info.py  _diag_in2.py  _diag_live_click.py  _diag_multiclient.py  _diag_now.py  _diag_pie_input.py  _diag_reset.py  _diag_st.py  _diag_start1.py  _diag_state.py  _diag_tree.py  _discover_widgets.py  _fixtures.py  _inline_draft_check.py  _junit_writer.py  _mcp_http_client.py  _pie2_start.py  _pie_common.py  _screenshot_diff.py  _smoke_common.py  _smoke_pie_multiclient.py  _smoke_set_text.py  _stomp_opponent.py  _verify_matchmaking.py  _verify_multiworld.py  playtest_solo_visual.py  playtest_visual.py  run_all.py  smoke_animation.py  smoke_blueprint.py  smoke_fullgame_solo.py  smoke_headless_twobot.py  (+25 more)
Python/tools/: _envelope.py  _envelope_design.md  _graph_builder_design.md  _pin_diagnostics.py  animation_tools.py  asset_tools.py  blueprint_tools.py  console_tools.py  data_asset_tools.py  editor_tools.py  enhanced_input_tools.py  graph_builder.py  level_tools.py  material_tools.py  mesh_tools.py  niagara_tools.py  node_tools.py  pie_tools.py  primitives.py  project_config.py  project_tools.py  result_format.py  (+4 more)
(+82 files in other folders)
